@@ -1,0 +1,13 @@
+aclocal.m4
+build-aux/depcomp
+build-aux/install-sh
+build-aux/ltmain.sh
+build-aux/missing
+configure
+debian/libapache2-mod-shib2.shibd.init
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+shibsp/paths.h
