@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Debian Shib Team <pkg-shibboleth-devel@lists.alioth.debian.org>
 Uploaders: Russ Allbery <rra@debian.org>, Ferenc Wagner <wferi@niif.hu>,
  Faidon Liambotis <paravoid@debian.org>
-Build-Depends: debhelper (>= 7), apache2-threaded-dev, autoconf, automake,
+Build-Depends: debhelper (>= 8), apache2-threaded-dev, autoconf, automake,
  autotools-dev, doxygen, liblog4cpp5-dev, libmemcached-dev,
  libsaml2-dev (>= 2.4), libssl-dev, libtool, libxerces-c-dev,
  libxml-security-c-dev (>= 1.6), libxmltooling-dev (>= 1.4),
